--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section class="container bg-white px-0 py-3">
     <header class="jumbotron d-flex flex-column bg-white py-1 px-3 mb-2">
       <div class="d-flex flex-row align-items-center">
-        <h1 class="m-0 display-4">Supercars</h1>
+        <h1 class="m-0 display-4">A Guide To Supercars</h1>
         <img class="icon ml-auto" src="images/Sportscar-car-2-icon.png">
       </div>
       <hr class="bg-dark m-1 mt-2">
