--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130800315-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130800315-1');
+</script>
+
   <meta charset="UTF-8">
   <title>Super Cars</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
@@ -233,16 +244,5 @@
   <script src="index.js"></script>
 
 </body>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130778819-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag('js', new Date());
-  gtag('config', 'UA=130778819-1');
-</script>
 
 </html>
